# associative

./: .gitignore  .stignore  CLAUDE.md  README.md  manifest.scm  pyproject.toml  setup.py
associative/: __init__.py
associative/datasets/: __init__.py  grid.py  imagenet32.py  moviechat.py  utils.py
associative/nn/functional/: __init__.py  energy_transformer.py
associative/nn/modules/: __init__.py  attention.py  basis.py  config.py  continuous.py  hopfield.py  integrator.py  normalization.py  optimization.py  transformer.py  utils.py  vision.py
associative/utils/: __init__.py  decoders.py  graph.py  losses.py  masking.py  training.py
associative/utils/audio/: __init__.py  embeddings.py  metrics.py  transforms.py
associative/utils/video/: __init__.py  _registry.py  embeddings.py  functional.py  loaders.py  metrics.py  transforms.py
configs/: config.yaml  graph_config.yaml
configs/train/: graph_classification.yaml  mae.yaml
examples/configs/: graphclass_base.yaml  imagerecon_base.yaml
examples/embedrecon/moviechat/: download.py
examples/graphclass/: README.md
examples/graphclass/dd/: config.yaml  train.py  visualize.py
examples/graphclass/mutag/: README.md  config.yaml  train.py  visualize.py
examples/graphclass/nci/: config.yaml  train.py  visualize.py
examples/graphclass/proteins/: config.yaml  train.py  visualize.py
examples/graphclass/zinc/: README.md  config.yaml  train.py  visualize.py
examples/imagerecon/: README.md
examples/imagerecon/cifar-10/: README.md  config.yaml  demo.py  infer.py  train.py  visualize.py
examples/imagerecon/cifar-100/: README.md  config.yaml  demo.py  infer.py  train.py  visualize.py
examples/imagerecon/imagenet32-1000/: README.md  config.yaml  demo.py  infer.py  launch.sh  scaling-data.py  scaling-model.py  train.py  visualize.py
examples/videorecon/moviechat/: config.yaml  demo.py  download.py  experiment.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_equivalence.py  test_met_integration.py  test_training.py
tests/unit/datasets/: __init__.py  test_grid.py  test_imagenet32.py  test_moviechat.py
tests/unit/nn/: __init__.py  test_attention.py  test_basis.py  test_continuous.py  test_hopfield.py  test_integrator.py  test_optimization.py  test_transformer.py
tests/unit/utils/: __init__.py  test_decoders.py  test_losses.py  test_masking.py
tests/unit/utils/audio/: __init__.py  test_embeddings.py  test_metrics.py  test_transforms.py
tests/unit/utils/video/: __init__.py  test_embeddings.py  test_functional.py  test_metrics.py  test_transforms.py
