[tool.poetry]
name = "associative"
version = "0.1.0"
description = "PyTorch implementation of associative memory models"
authors = ["Ayan Das <bvits@riseup.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/b-vitamins/associative"
repository = "https://github.com/b-vitamins/associative"
keywords = ["pytorch", "associative-memory", "hopfield-networks", "energy-based-models", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML frameworks (pinned to Guix versions)
torch = "2.8.0"
torchvision = "0.23.0"
torch-geometric = "2.7.0"
torchaudio = "2.8.0"
torchmetrics = "1.4.1"
torchvggish = "*"
# Transformers and utilities
transformers = "4.44.2"
huggingface-hub = "0.32.2"
einops = "0.8.1"
# Data processing
pandas = "2.2.3"
pyarrow = "21.0.0"
# Audio processing
librosa = "0.10.2.post1"
soundfile = "0.13.1"
pesq = "0.15"
pystoi = "0.4.1"
# Video processing
decord = "0.6.0"
# Visualization
pillow = "11.1.0"
matplotlib = "3.8.2"
seaborn = "0.13.2"
scikit-learn = "1.6.1"
# General utilities
tqdm = "4.67.1"
hydra-core = "1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "6.2.1"
ruff = "0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "YTT", "S", "A", "C4", "RET", "SIM", "PD", "PL", "PERF", "RUF"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR0913", "PLR2004"] # Allow many arguments and magic values in tests
"associative/nn/functional/**.py" = ["PLR0913"] # Functional APIs have many parameters
"associative/nn/modules/normalization.py" = ["PLR0913"] # Init needs factory kwargs
"associative/nn/modules/vision.py" = ["PLR0913"] # Init needs many vision params
"associative/nn/modules/optimization.py" = ["PLR0913"] # Init needs many CCCP params
"associative/nn/modules/continuous.py" = ["PLR0913"] # Init needs many params
"associative/nn/modules/hopfield.py" = ["PLR0913"] # Init needs many cross-modal params
"associative/nn/modules/transformer.py" = ["PLR0913"] # Forward methods need many params
"associative/utils/graph.py" = ["PLR0913"] # Graph utilities need many params
"associative/utils/video/**.py" = ["PLR0913", "N812"] # Video utilities need many params; functional as F is convention
"tests/unit/utils/video/**.py" = ["N812"] # Allow functional as F import convention
"examples/.py" = ["PLR0913", "PLR0915", "PLR2004"] # Training scripts and examples need many params, statements, and magic values

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=associative --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
